hphp/hack/test/typecheck/anonymous_shape3.php.exp
File "anonymous_shape3.php", line 8, characters 6-8:
The field y is undefined (Typing[4108])
File "anonymous_shape3.php", line 7, characters 15-19:
You might want to check this out
